--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ body .hidden {
   border-bottom-left-radius: 20px;
   border: none;
   background-color: #c4d4e8;
+  color: #fff;
 }
 .modal .submit-task #created-task::-moz-placeholder {
   font-family: "Montserrat", sans-serif;
@@ -143,6 +144,7 @@ body .hidden {
   padding: 1em;
 }
 .modal .submit-task .submit-button {
+  cursor: pointer;
   font-family: "Montserrat", sans-serif;
   font-size: 1.3rem;
   color: #fff;
