adicionadas responsividade e funcionalidade

--- a/abstract/_variables.scss
+++ b/abstract/_variables.scss
@@ -5,6 +5,7 @@ $inter: "Inter", sans-serif;
 // Colors
 $primary-color: #1d202f;
 $secondary-color: #51608f;
+$white: #fff;
 $text-color: #000000;
 $text-color-hover: #c4d4e8;
 $button-color-hover: #5d6981;
