--- a/abstract/_root.scss
+++ b/abstract/_root.scss
@@ -2,11 +2,14 @@ body {
   background-color: #f3f3f3;
   box-sizing: border-box;
   position: relative;
-  .done {
-    text-decoration: line-through;
+  &::-webkit-scrollbar {
+    display: none;
   }
-
   .hidden {
     display: none;
+  }
+
+  .blur {
+    filter: blur(4px);
   }
 }
