--- a/components/_header.scss
+++ b/components/_header.scss
@@ -28,6 +28,7 @@
     gap: 1em;
     padding: 1em 2em;
     border-radius: 10px;
+    border: none;
     &:hover {
       background-color: variables.$button-color-hover;
       cursor: pointer;
@@ -37,5 +38,3 @@
     }
   }
 }
-  
-
