--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,14 @@ body {
   box-sizing: border-box;
   position: relative;
 }
-body .done {
-  text-decoration: line-through;
+body::-webkit-scrollbar {
+  display: none;
 }
 body .hidden {
   display: none;
+}
+body .blur {
+  filter: blur(4px);
 }
 
 .header__container {
@@ -38,6 +41,7 @@ body .hidden {
   gap: 1em;
   padding: 1em 2em;
   border-radius: 10px;
+  border: none;
 }
 .header__container #new-task:hover {
   background-color: #5d6981;
@@ -57,34 +61,47 @@ body .hidden {
   padding: 2em 0;
   gap: 2em;
 }
-.tasks__container .task {
+.tasks__container .tasks__list .task {
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 8px;
   padding: 1em;
 }
-.tasks__container .task label {
+.tasks__container .tasks__list .task .buttons-container {
   display: flex;
-  gap: 2em;
-  cursor: pointer;
+  gap: 0.8em;
 }
-.tasks__container .task__buttons {
-  display: flex;
-  gap: 1.5em;
+.tasks__container .tasks__list .task .buttons-container .button-edit {
+  border: 1px solid #1d202f;
+  border-radius: 1em;
   color: #1d202f;
+  padding: 0.5em 2em;
 }
-.tasks__container .task__buttons .fa-pencil:hover, .tasks__container .task__buttons .fa-square-xmark:hover {
-  cursor: pointer;
-  transform: scale(1.2);
-}
-.tasks__container .task__buttons .fa-square-xmark {
+.tasks__container .tasks__list .task .buttons-container .button-delete {
+  padding: 0.5em 2em;
+  border-radius: 1em;
+  border: 1px solid #1d202f;
+  font-size: 18px;
   color: red;
 }
-.tasks__container .task-content {
+.tasks__container .tasks__list .task .buttons-container .button-edit:hover, .tasks__container .tasks__list .task .buttons-container .button-delete:hover {
+  cursor: pointer;
+  background-color: #fff;
+}
+.tasks__container .tasks__list .task-content {
   font-family: "Montserrat", sans-serif;
   font-size: 1.2rem;
   color: #000000;
+  text-transform: capitalize;
+}
+.tasks__container .clear-all {
+  cursor: pointer;
+  font-family: "Inter", sans-serif;
+  font-size: 1.5rem;
+  color: red;
+  padding: 0.5em;
+  border: none;
 }
 
 .modal {
@@ -98,10 +115,9 @@ body .hidden {
   border-radius: 20px;
   place-content: center;
   position: fixed;
-  align-self: center;
-  justify-self: center;
   top: 25%;
   left: 28%;
+  animation: modalOpen 0.3s ease-in-out;
 }
 .modal .fa-x {
   cursor: pointer;
@@ -112,7 +128,7 @@ body .hidden {
 }
 .modal label {
   font-family: "Inter", sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   color: #1d202f;
   font-weight: 600;
 }
@@ -122,7 +138,8 @@ body .hidden {
 .modal .submit-task {
   display: flex;
 }
-.modal .submit-task #created-task {
+.modal .submit-task #created-task,
+.modal .submit-task #edited-task {
   flex: 2;
   padding: 1.5em;
   border-top-left-radius: 20px;
@@ -130,23 +147,32 @@ body .hidden {
   border: none;
   background-color: #c4d4e8;
   color: #fff;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  font-size: 1rem;
 }
-.modal .submit-task #created-task::-moz-placeholder {
+.modal .submit-task #created-task::-moz-placeholder, .modal .submit-task #edited-task::-moz-placeholder {
   font-family: "Montserrat", sans-serif;
   font-size: 1.3rem;
   color: #fff;
   padding: 1em;
+  text-align: center;
+  font-weight: 500;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
-.modal .submit-task #created-task::placeholder {
+.modal .submit-task #created-task::placeholder,
+.modal .submit-task #edited-task::placeholder {
   font-family: "Montserrat", sans-serif;
   font-size: 1.3rem;
   color: #fff;
   padding: 1em;
+  text-align: center;
+  font-weight: 500;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 .modal .submit-task .submit-button {
   cursor: pointer;
   font-family: "Montserrat", sans-serif;
-  font-size: 1.3rem;
+  font-size: 1rem;
   color: #fff;
   font-weight: 500;
   flex: 1;
@@ -154,4 +180,401 @@ body .hidden {
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   background-color: #1d202f;
+}
+.modal .submit-task .submit-button:hover {
+  opacity: 0.8;
+}
+.modal .alert-text {
+  font-family: "Inter", sans-serif;
+  font-size: 1.3rem;
+  color: red;
+  font-weight: 500;
+  text-align: center;
+}
+
+@keyframes modalOpen {
+  from {
+    top: 0%;
+    opacity: 0;
+  }
+  to {
+    top: 25%;
+    opacity: 1;
+  }
+}
+.links-container {
+  width: 100vh;
+  background-color: #fff;
+  justify-self: center;
+  padding: 2em;
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+  box-shadow: 7px 3px 74px -15px rgba(0, 0, 0, 0.45);
+}
+.links-container .links-list {
+  display: flex;
+  justify-content: center;
+  gap: 4em;
+}
+.links-container .links-list .links-button {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
+  color: #1d202f;
+  font-weight: 500;
+}
+.links-container .links-list .links-button:hover {
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 1024px) {
+  body {
+    width: 100dvw;
+  }
+  body .links-container {
+    max-width: 80%;
+    align-self: center;
+    border-bottom-left-radius: 0.2em;
+    border-bottom-right-radius: 0.2em;
+  }
+  body .links-container .links-list {
+    gap: 4em;
+  }
+  body .links-container .links-list .links-button {
+    font-size: 1.2rem;
+  }
+  body .main-container {
+    width: 100dvw;
+  }
+  body .main-container .header__container {
+    width: 100%;
+    padding: 1em;
+    justify-content: space-around;
+    gap: 0;
+  }
+  body .modal {
+    width: 75%;
+    top: 25%;
+    left: 8%;
+  }
+  body .modal .submit-task #created-task,
+  body .modal .submit-task #edited-task {
+    padding: 1.2em;
+  }
+  body .modal .submit-task .submit-button {
+    font-size: 1em;
+  }
+}
+@media screen and (max-width: 768px) {
+  body {
+    width: 100dvw;
+    display: flex;
+    flex-direction: column;
+  }
+  body .links-container {
+    max-width: 83%;
+    align-self: center;
+    border-bottom-left-radius: 0.5em;
+    border-bottom-right-radius: 0.5em;
+  }
+  body .links-container .links-list {
+    gap: 2em;
+  }
+  body .links-container .links-list .links-button {
+    font-size: 1rem;
+  }
+  body .main-container {
+    width: 100dvw;
+    margin: 2em 0;
+  }
+  body .main-container .header__container {
+    width: 100%;
+    padding: 1em;
+    justify-content: space-around;
+    gap: 0;
+  }
+  body .main-container .header__container .header__title__container {
+    gap: 1em;
+    justify-content: space-around;
+  }
+  body .main-container .header__container .header__title__container .header__title {
+    font-size: 1.5rem;
+  }
+  body .main-container .header__container #new-task {
+    gap: 0.5em;
+    font-size: 1.2rem;
+  }
+  body .main-container .tasks__container .tasks__list {
+    gap: 1em;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container {
+    gap: 0.5em;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-edit,
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-delete {
+    padding: 0.5em 1em;
+    border-radius: 0.5em;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-edit {
+    font-size: 0.7rem;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-delete {
+    font-size: 1rem;
+  }
+  body .main-container .tasks__container .tasks__list .task .task-content {
+    font-size: 1.2rem;
+  }
+  body .main-container .modal {
+    width: 75%;
+    top: 25%;
+    left: 6.55%;
+  }
+  body .main-container .modal .fa-x {
+    top: 7%;
+    right: 5%;
+  }
+  body .main-container .modal label {
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+  body .main-container .submit-task #created-task,
+  body .main-container .submit-task #edited-task {
+    padding: 0.8em;
+    font-size: 1.2rem;
+  }
+  body .main-container .submit-task #created-task::-moz-placeholder, body .main-container .submit-task #edited-task::-moz-placeholder {
+    font-size: 1rem;
+  }
+  body .main-container .submit-task #created-task::placeholder,
+  body .main-container .submit-task #edited-task::placeholder {
+    font-size: 1rem;
+  }
+  body .main-container .submit-task .submit-button {
+    font-size: 0.9rem;
+  }
+  body .main-container .clear-all {
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  body {
+    width: 100dvw;
+    display: flex;
+    flex-direction: column;
+  }
+  body .links-container {
+    max-width: 80%;
+    align-self: center;
+    border-bottom-left-radius: 0.5em;
+    border-bottom-right-radius: 0.5em;
+  }
+  body .links-container .links-list {
+    gap: 2em;
+  }
+  body .links-container .links-list .links-button {
+    font-size: 1rem;
+  }
+  body .main-container {
+    width: 100dvw;
+    margin: 2em 0;
+  }
+  body .main-container .header__container {
+    width: 100%;
+    padding: 1em;
+    justify-content: space-around;
+    gap: 0;
+    border: none;
+  }
+  body .main-container .header__container .header__title__container {
+    gap: 1em;
+    justify-content: space-around;
+  }
+  body .main-container .header__container .header__title__container .header__title {
+    font-size: 1.5rem;
+  }
+  body .main-container .header__container #new-task {
+    gap: 0.5em;
+    padding: 0.5em 1em;
+    font-size: 1.2rem;
+  }
+  body .main-container .tasks__container .tasks__list {
+    gap: 1em;
+  }
+  body .main-container .tasks__container .tasks__list .task {
+    gap: 1em;
+    flex-wrap: wrap;
+    border-bottom: 1px solid #1d202f;
+    border-radius: 0;
+    margin: 0 1em;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container {
+    gap: 0.5em;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-edit, body .main-container .tasks__container .tasks__list .task .buttons-container .button-delete {
+    padding: 0.5em 1em;
+    border-radius: 0.5em;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-edit {
+    font-size: 0.6em;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-delete {
+    font-size: 0.9em;
+  }
+  body .main-container .tasks__container .tasks__list .task .task-content {
+    font-size: 1rem;
+    font-weight: 500;
+    max-width: 100%;
+  }
+  body .main-container .tasks__container .clear-all {
+    font-size: 1.3rem;
+  }
+  body .modal {
+    width: 75%;
+    top: 25%;
+    left: 6%;
+  }
+  body .modal .fa-x {
+    top: 6%;
+    right: 8%;
+  }
+  body .modal label {
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+  body .modal .submit-task {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6em;
+  }
+  body .modal .submit-task #created-task,
+  body .modal .submit-task #edited-task {
+    padding: 1em;
+    border-radius: 0.5em;
+  }
+  body .modal .submit-task #created-task::-moz-placeholder, body .modal .submit-task #edited-task::-moz-placeholder {
+    font-size: 1rem;
+  }
+  body .modal .submit-task #created-task::placeholder,
+  body .modal .submit-task #edited-task::placeholder {
+    font-size: 1rem;
+  }
+  body .modal .submit-task #created-task:focus,
+  body .modal .submit-task #edited-task:focus {
+    outline: 1px solid #1d202f;
+  }
+  body .modal .submit-task .submit-button {
+    align-self: center;
+    width: 60%;
+    font-size: 1em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+  }
+  body .modal .alert-text {
+    font-size: 1.3rem;
+  }
+}
+@media screen and (max-width: 380px) {
+  body .links-container {
+    width: 70%;
+  }
+  body .links-container .links-list {
+    gap: 2em;
+  }
+  body .links-container .links-list .links-button {
+    font-size: 0.7rem;
+  }
+  body .main-container .header__container {
+    padding: 0.5em;
+    justify-content: space-around;
+    align-items: center;
+    border: none;
+  }
+  body .main-container .header__container .header__title__container {
+    font-size: 0.6rem;
+  }
+  body .main-container .header__container .header__title__container .header__title {
+    font-size: 1.2rem;
+  }
+  body .main-container .header__container #new-task {
+    font-size: 0.9rem;
+  }
+  body .main-container .tasks__container .tasks__list {
+    gap: 0.5em;
+  }
+  body .main-container .tasks__container .tasks__list .task {
+    flex-direction: column;
+    border-bottom: 1px solid #1d202f;
+    border-radius: 0;
+    margin: 0 1em;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container {
+    gap: 0.5em;
+    align-self: flex-end;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-edit, body .main-container .tasks__container .tasks__list .task .buttons-container .button-delete {
+    border: 1px solid #1d202f;
+    border-radius: 0.5em;
+    color: #1d202f;
+    padding: 0.3em 1em;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-edit {
+    font-size: 0.7rem;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .button-delete {
+    font-size: 1rem;
+    color: red;
+  }
+  body .main-container .tasks__container .tasks__list .task .buttons-container .task-content {
+    font-size: 1rem;
+    font-weight: 500;
+    max-width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+  body .main-container .tasks__container .clear-all {
+    font-size: 1.2rem;
+  }
+  body .main-container .modal {
+    width: 75%;
+    top: 25%;
+    left: 4%;
+  }
+  body .main-container .modal .fa-x {
+    top: 7%;
+    right: 8%;
+  }
+  body .main-container .modal label {
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+  body .main-container .modal .submit-task {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6em;
+  }
+  body .main-container .modal .submit-task #created-task,
+  body .main-container .modal .submit-task #edited-task {
+    padding: 1em;
+    border-radius: 0.5em;
+  }
+  body .main-container .modal .submit-task #created-task::-moz-placeholder, body .main-container .modal .submit-task #edited-task::-moz-placeholder {
+    font-size: 1rem;
+  }
+  body .main-container .modal .submit-task #created-task::placeholder,
+  body .main-container .modal .submit-task #edited-task::placeholder {
+    font-size: 1rem;
+  }
+  body .main-container .modal .submit-task #created-task:focus,
+  body .main-container .modal .submit-task #edited-task:focus {
+    outline: 1px solid #1d202f;
+  }
+  body .main-container .modal .submit-task .submit-button {
+    align-self: center;
+    width: 60%;
+    font-size: 1em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+  }
+  body .main-container .modal .alert-text {
+    font-size: 1rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
