--- a/styles.scss
+++ b/styles.scss
@@ -3,4 +3,6 @@
 @use "./components/main";
 @use "./components/tasks";
 @use "./components/modal";
+@use "./components/links";
+@use "./components/media-queries";
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
